rust/macros/tests/invalid/target/debug/deps/comma_sep-619cef34631155ae.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/comma_sep-619cef34631155ae.d: comma_sep.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libcomma_sep-619cef34631155ae.rmeta: comma_sep.rs Cargo.toml

comma_sep.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
